--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,11 @@
   height: 100vh;
   font-size: 1.6rem;
   text-align: center;
+  background-color: red;
+}
+
+.content {
+  width: 80%;
+  height: 100%;
+  background-color: green;
 }
