--- a/src/index.css
+++ b/src/index.css
@@ -61,16 +61,15 @@ code {
 }
 
 /* couple more things */
-* {
-  box-sizing: border-box;
-}
-
 html {
   font-size: 62.5%;
-  width: 100vw;
-  height: 100vh;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+* {
+  box-sizing: border-box;
 }
