--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,18 @@
 .App {
   width: 100vw;
   height: 100vh;
+  margin: 0 auto;
   font-size: 1.6rem;
   text-align: center;
-  background-color: red;
+}
+
+.outterWrap {
+  width: 80%;
+  max-width: 95rem;
+  height: 100%;
+  background-color: blue;
 }
 
 .content {
-  width: 80%;
-  height: 100%;
   background-color: green;
 }
