--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,26 @@
-.App {
+.app {
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
   font-size: 1.6rem;
   text-align: center;
+  background-color: #070707;
+  display: flex;
+  justify-content: center;
 }
 
 .outterWrap {
   width: 80%;
   max-width: 95rem;
   height: 100%;
-  background-color: blue;
+  background-color: #4C5760;
+  border-left: 0.5rem solid #5B5B5B;
+  border-right: 0.5rem solid #5B5B5B;
 }
 
-.content {
-  background-color: green;
+@media only screen and (max-width: 95rem) {
+  .outterWrap {
+    width: 100%;
+  }
+
 }
