--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-    width: 100vw;
+    width: 100%;
     height: 6.5rem;
     position: fixed;
     top: 0;
@@ -7,6 +7,7 @@ header {
     background-color: #5B5B5B;
     display: flex;
     justify-content: center;
+    z-index: 99;
 }
 
 .navWrap {
