--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 6.5rem;
+    height: var(--header);
     position: fixed;
     top: 0;
     left: 0;
@@ -20,9 +20,11 @@ header {
 
 .branding {
     height: 100%;
+    max-height: 7rem;
     max-width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-self: center;
     padding: 0.5rem 2rem;
 }
 
@@ -51,6 +53,9 @@ header {
 }
 
 @media only screen and (max-width: 95rem) {
+    header {
+        height: 4rem;
+    }
     .menu {
         display: none;
     }
