--- a/src/components/mainbody/Main.css
+++ b/src/components/mainbody/Main.css
@@ -9,7 +9,7 @@
     padding-top: 2rem;
     background-color: black;
     color: white;
-    margin-top: 6.5rem;
+    margin-top: 9.5rem;
 }
 
 .profileImage {
@@ -30,4 +30,10 @@
     font-size: 3.2rem;
     padding-bottom: 1.5rem;
     font-family: 'Sedgwick Ave Display', cursive;
+}
+
+@media only screen and (max-width: 95rem) {
+    .mainBio {
+        margin-top: 4rem;
+    }
 }
