--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -21,7 +21,7 @@ header {
 .branding {
     height: 100%;
     max-height: 7rem;
-    max-width: 100%;
+    width: 25%;
     display: flex;
     justify-content: center;
     align-self: center;
@@ -33,11 +33,16 @@ header {
     width: auto;
 }
 
-.menuBar {
+nav {
+    width: 75%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 0.5rem 2rem;
+}
+
+.menu {
+    display: flex;
 }
 
 .links {
@@ -45,7 +50,6 @@ header {
     font-weight: 400;
     text-transform: uppercase;
     padding: 1rem 1.5rem;
-    width: 60%;
 }
 
 .mobileMenu {
@@ -53,13 +57,25 @@ header {
 }
 
 @media only screen and (max-width: 95rem) {
-    header {
-        height: 4rem;
-    }
     .menu {
         display: none;
     }
     .mobileMenu {
-        display: block;
+        position: absolute;
+        top: var(--header);
+        left: 0;
+        width: 100vw;
+        height: calc(100vh - var(--header));
+        background-color: black;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
+    .mobileMenu li {
+        font-size: 2.8rem;
+        font-weight: bold;
+        padding: 1rem 3rem;
+    }
+
 }
