finished up mobile menu functions

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,6 +56,10 @@ nav {
     display: none;
 }
 
+.mobileIcon {
+    display: none;
+}
+
 @media only screen and (max-width: 95rem) {
     .menu {
         display: none;
@@ -66,7 +70,7 @@ nav {
         left: 0;
         width: 100vw;
         height: calc(100vh - var(--header));
-        background-color: black;
+        background-color: rgba(0,0,0,0.8);
         color: white;
         display: flex;
         flex-direction: column;
@@ -76,6 +80,9 @@ nav {
         font-size: 2.8rem;
         font-weight: bold;
         padding: 1rem 3rem;
+    }
+    .mobileIcon {
+        display: block;
     }
 
 }
