--- a/src/components/mainSection/mainSection.css
+++ b/src/components/mainSection/mainSection.css
@@ -2,4 +2,6 @@
     margin-top: var(--header);
     min-height: calc(100vh - var(--header) - var(--footer));
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
