--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display');
+
 .aboutWrapper {
     width: 100%;
-    background-color: red;
+    max-width: 95rem;
+    min-height: 100%;
+    padding-top: 2rem;
+    color: white;
+}
+
+.mainBio {
+    text-align: justify;
+    font-size: 1.8rem;
+    letter-spacing: 0.2px;
+    line-height: 2;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    color: white;
+}
+
+.signature {
+    margin-top: 2rem;
+    text-align: right;
+    font-size: 3.2rem;
+    padding-bottom: 1.5rem;
+    font-family: 'Sedgwick Ave Display', cursive;
+}
+
+@media only screen and (max-width: 95rem) {
+    .mainBio {
+        margin-top: 4rem;
+    }
 }
