--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .app {
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
-  font-size: 1.6rem;
   text-align: center;
-  background-color: #070707;
+  color: #fdffff;
+  background-color: #011627;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.container {
+  width: 100%;
+  max-width: 90rem;
+  min-height: 100%;
 }
