--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,16 +4,13 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #5B5B5B;
+    background-color: #324A5F;
     display: flex;
     justify-content: center;
     z-index: 99;
 }
 
 .navWrap {
-    width: 80%;
-    max-width: 95rem;
-    height: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -34,7 +31,7 @@ header {
 }
 
 nav {
-    width: 75%;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -46,21 +43,17 @@ nav {
 }
 
 .links {
-    font-size: 1.3rem;
+    font-size: var(--nav-links);
     font-weight: 400;
     text-transform: uppercase;
     padding: 1rem 1.5rem;
-}
-
-.mobileMenu {
-    display: none;
 }
 
 .mobileIcon {
     display: none;
 }
 
-@media only screen and (max-width: 95rem) {
+@media only screen and (max-width: 850px) {
     .menu {
         display: none;
     }
@@ -77,7 +70,6 @@ nav {
         justify-content: center;
     }
     .mobileMenu li {
-        font-size: 2.8rem;
         font-weight: bold;
         padding: 1rem 3rem;
     }
