--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 :root {
   --header: 9.5rem;
   --footer: 2.7rem;
+  --main-padding: 2rem;
+  --primary-text: 1.8rem;
+  --h1text: 3.6rem;
+  --nav-links: 1.4rem;
+  --text-color: #F5F5F8;
 }
 
-@media only screen and (max-width: 95rem) {
+@media only screen and (max-width: 850px) {
   :root {
-    --header: 4rem;
+    --header: 5.5rem;
+    --main-padding: 0.75rem;
+    --primary-text: 1.6rem;
+    --h1text: 2.2rem;
+    --nav-links: 2.8rem;
   }
-
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -34,26 +42,32 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /* template create react app css styling */
 body {
   line-height: 1;
@@ -65,18 +79,30 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
 /* couple more things */
 html {
   font-size: 62.5%;
 }
+
+h1 {
+  font-size: var(--h1text);
+  color: #759aab;
+  font-weight: bold;
+  padding: 2rem 0.75rem;
+  letter-spacing: 0.5rem;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 * {
   box-sizing: border-box;
 }
