--- a/src/components/portfolio/albums/albums.css
+++ b/src/components/portfolio/albums/albums.css
@@ -22,28 +22,29 @@
     top: var(--header);
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .fullImage {
     padding-top: var(--main-padding);
     padding-bottom: var(--main-padding);
     max-width: 90%;
-    height: 100%;
     height: auto;
 }
 
 .fullImage img {
-    object-fit: cover;
     max-width: 100%;
-    height: auto;
+    height: 100%;
+    max-height: calc(100vh - ((var(--header) + var(--footer)) * 2));
 }
 
 .imageControl {
-    width: 100%;
+    width: 35%;
     display: flex;
+    padding: 1rem 0;
 }
 
 .controls {
+    cursor: pointer;
     width: 30%;
 }
