--- a/src/components/portfolio/albums/albums.css
+++ b/src/components/portfolio/albums/albums.css
@@ -18,33 +18,39 @@
     flex-direction: column;
     align-items: center;
     padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
     justify-content: flex-start;
     top: var(--header);
+    bottom: var(--footer);
     left: 0;
     width: 100%;
-    /* height: 100%; */
+    max-height: calc(100vh - var(--header) - var(--footer));
 }
 
 .fullImage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-top: var(--main-padding);
     padding-bottom: var(--main-padding);
     max-width: 90%;
-    height: auto;
+    max-height: 100%;
+    z-index: 98;
 }
 
 .fullImage img {
     max-width: 100%;
-    height: 100%;
-    max-height: calc(100vh - ((var(--header) + var(--footer)) * 2));
+    height: auto;
+    max-height: 100%;
 }
 
 .imageControl {
-    width: 35%;
+    width: 50%;
     display: flex;
-    padding: 1rem 0;
+    padding: 0.25rem 0;
 }
 
 .controls {
     cursor: pointer;
-    width: 30%;
+    width: 33.3%;
 }
