working on events page

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,7 +5,7 @@
     text-align: justify;
     letter-spacing: 0.2px;
     line-height: 2;
-    padding: 0 2rem;
+    padding: var(--main-padding) 2rem 0;
 }
 
 .signature {
