working on booking and event stuff

--- a/src/app.css
+++ b/src/app.css
@@ -20,3 +20,12 @@
   display: flex;
   justify-content: flex-start;
 }
+
+input, textarea {
+  background-color: #011627;
+  border: none;
+  border-bottom: 0.02rem solid #364652;
+  text-transform: uppercase;
+  margin: 1rem 0.5rem;
+  width: 100%;
+}
