cleaning up some

--- a/src/components/categories/categories.css
+++ b/src/components/categories/categories.css
@@ -45,5 +45,13 @@
   .categories {
     width: 100%;
   }
+  .category {
+    width: 100%;
+    height: 13.5rem;
+  }
+  .linkHead {
+    margin-bottom: 1.5rem;
+    font-size: 2rem;
+  }
 
 }
