--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,8 @@
   margin: 0 auto;
   text-align: center;
   color: #fdffff;
-  background-color: #011627;
+  /* background-color: #011627; */
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,6 +16,7 @@
   min-height: 100%;
 }
 
+/* heading at the top of each section/page */
 .pageTitle {
   width: 100%;
   display: flex;
@@ -28,4 +30,12 @@ input, textarea {
   text-transform: uppercase;
   margin: 1rem 0.5rem;
   width: 100%;
+}
+
+.mainSection {
+    margin-top: var(--header);
+    min-height: calc(100vh - var(--header) - var(--footer));
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
