--- a/src/components/mainSection/mainSection.css
+++ b/src/components/mainSection/mainSection.css
@@ -1,7 +1,7 @@
-.mainSection {
+/* .mainSection {
     margin-top: var(--header);
     min-height: calc(100vh - var(--header) - var(--footer));
     width: 100%;
     display: flex;
     justify-content: center;
-}
+} */
