--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,8 @@ table {
 
 /* template create react app css styling */
 body {
+  width: 100vw;
+  height: 100vh;
   line-height: 1;
   margin: 0;
   padding: 0;
