updated footer section, created landing page

--- a/src/index.css
+++ b/src/index.css
@@ -1,110 +1,90 @@
-:root {
-  --header: 7rem;
-  --footer: 2.7rem;
-  --main-padding: 2rem;
-  --primary-text: 1.8rem;
-  --h1text: 3.6rem;
-  --nav-links: 1.4rem;
-  --text-color: #F5F5F8;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-@media only screen and (max-width: 850px) {
-  :root {
-    --header: 5.5rem;
-    --main-padding: 0.75rem;
-    --primary-text: 1.6rem;
-    --h1text: 2.2rem;
-    --nav-links: 2.8rem;
-  }
-}
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-blockquote, q {
-	quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* template create react app css styling */
-body {
-  width: 100vw;
-  height: 100vh;
-  line-height: 1;
+/* Remove default margin and padding */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+fieldset,
+figure,
+blockquote,
+dl,
+div,
+dd {
   margin: 0;
   padding: 0;
+}
+
+/* Set default font size and line height */
+body {
+  font-size: 16px;
+  line-height: 1.5;
+  max-width: 100vw;
+  max-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* Remove list styles */
+ul,
+ol {
+  list-style: none;
 }
 
-/* couple more things */
+/* Remove hyperlink styles */
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* Remove form element styles */
+button,
+input,
+select,
+textarea {
+  font-size: inherit;
+  margin: 0;
+}
+
+/* Reset images to display as block elements */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* Set a default border box for all elements */
 html {
   font-size: 62.5%;
-}
-
-h1 {
-  font-size: var(--h1text);
-  color: #759aab;
-  font-weight: bold;
-  padding: 2rem 0.75rem;
-  letter-spacing: 0.5rem;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-* {
   box-sizing: border-box;
+}
+
+/* Reset default button styles */
+button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+/* Reset default input styles */
+input {
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
